force-app/main/default/objects/Case/fields/Date_First_Customer_Contact_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Date_First_Customer_Contact_Attempt__c</fullName>
    <label>Date First Customer Contact Attempt</label>
    <type>DateTime</type>
</CustomField>