force-app/main/default/objects/Case/fields/Date_Followed_Up_W_Customer__c.field-meta.xml
<CustomField>
    <fullName>Date_Followed_Up_W_Customer__c</fullName>
    <label>Date Followed Up W Customer</label>
    <type>DateTime</type>
</CustomField>