force-app/main/default/objects/Case/fields/Date_Inventory_Status_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Date_Inventory_Status_Confirmed__c</fullName>
    <label>Date Inventory Status Confirmed</label>
    <type>DateTime</type>
</CustomField>