force-app/main/default/objects/Case/fields/Date_Invoice_Created__c.field-meta.xml
<CustomField>
    <fullName>Date_Invoice_Created__c</fullName>
    <label>Date Invoice Created</label>
    <type>DateTime</type>
</CustomField>