force-app/main/default/objects/Case/fields/Date_Invoice_Details_Package_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_Invoice_Details_Package_Sent__c</fullName>
    <label>Date Invoice Details Package Sent</label>
    <type>DateTime</type>
</CustomField>