force-app/main/default/objects/Case/fields/Date_Moved_on_Call__c.field-meta.xml
<CustomField>
    <fullName>Date_Moved_on_Call__c</fullName>
    <label>Date Moved on Call</label>
    <type>DateTime</type>
</CustomField>