force-app/main/default/objects/Case/fields/Date_of_Account_Update_Review_Completed__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Account_Update_Review_Completed__c</fullName>
    <inlineHelpText>Verify in SKP that all new rates have been properly updated</inlineHelpText>
    <label>Date of Account Update  Review completed</label>
    <type>DateTime</type>
</CustomField>