force-app/main/default/objects/Case/fields/Date_of_Final_Service__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Final_Service__c</fullName>
    <label>Date of Final Service</label>
    <type>DateTime</type>
</CustomField>