force-app/main/default/objects/Case/fields/Date_of_Non_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Non_Conversion__c</fullName>
    <description>the date the case Status is was set to &apos;Non Conversion&apos;. Populated by field update</description>
    <label>Date of Non Conversion</label>
    <type>Date</type>
</CustomField>