force-app/main/default/objects/Case/fields/Date_of_Overall_Account_Review_Completed__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Overall_Account_Review_Completed__c</fullName>
    <inlineHelpText>30 days following the Account update &amp; review; check SKP to verify account has no open communicators/billing issues</inlineHelpText>
    <label>Date of Overall Account Review Completed</label>
    <type>DateTime</type>
</CustomField>