force-app/main/default/objects/Case/fields/Date_Ops_Confirmed_For_Timeline__c.field-meta.xml
<CustomField>
    <fullName>Date_Ops_Confirmed_For_Timeline__c</fullName>
    <label>Date Ops Confirmed For Timeline</label>
    <type>DateTime</type>
</CustomField>