force-app/main/default/objects/Case/fields/Date_Ops_emailed_for_timeline__c.field-meta.xml
<CustomField>
    <fullName>Date_Ops_emailed_for_timeline__c</fullName>
    <label>Date Ops Emailed For Timeline</label>
    <type>DateTime</type>
</CustomField>