force-app/main/default/objects/Case/fields/Date_Order_Fulfillment_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_Order_Fulfillment_Sent__c</fullName>
    <description>The date NCSP sends the order to Iron Mountain’s partner for fulfillment</description>
    <label>Date Order Fulfillment Sent</label>
    <type>Date</type>
</CustomField>