force-app/main/default/objects/Case/fields/Date_Paperwork_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_Paperwork_Received__c</fullName>
    <inlineHelpText>Date contract or internal paperwork (Dept Adds) received</inlineHelpText>
    <label>Date Paperwork Received</label>
    <type>DateTime</type>
</CustomField>