force-app/main/default/objects/Case/fields/Date_PDL_Approval_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_PDL_Approval_Received__c</fullName>
    <label>Date PDL Approval Received</label>
    <type>DateTime</type>
</CustomField>