force-app/main/default/objects/Case/fields/Date_PW_Order_Created__c.field-meta.xml
<CustomField>
    <fullName>Date_PW_Order_Created__c</fullName>
    <label>Date PW Order Created</label>
    <type>DateTime</type>
</CustomField>