force-app/main/default/objects/Case/fields/Date_PW_SR_Requested__c.field-meta.xml
<CustomField>
    <fullName>Date_PW_SR_Requested__c</fullName>
    <label>Date PW SR Requested</label>
    <type>DateTime</type>
</CustomField>