force-app/main/default/objects/Case/fields/Date_Resubmitted_to_Contracts__c.field-meta.xml
<CustomField>
    <fullName>Date_Resubmitted_to_Contracts__c</fullName>
    <label>Date Resubmitted to Contracts</label>
    <type>DateTime</type>
</CustomField>