force-app/main/default/objects/Case/fields/Date_Reviewed_Ncsp__c.field-meta.xml
<CustomField>
    <fullName>Date_Reviewed_Ncsp__c</fullName>
    <inlineHelpText>Date NCSP accepted, rejected or other</inlineHelpText>
    <label>Date Reviewed - NCSP</label>
    <type>DateTime</type>
</CustomField>