force-app/main/default/objects/Case/fields/Date_Second_Customer_Contact_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Date_Second_Customer_Contact_Attempt__c</fullName>
    <label>Date Second Customer Contact Attempt</label>
    <type>DateTime</type>
</CustomField>