force-app/main/default/objects/Case/fields/Date_Sent_to_AM__c.field-meta.xml
<CustomField>
    <fullName>Date_Sent_to_AM__c</fullName>
    <label>Date Sent to AM</label>
    <type>DateTime</type>
</CustomField>