force-app/main/default/objects/Case/fields/Date_Sent_to_Contracts_Admin__c.field-meta.xml
<CustomField>
    <fullName>Date_Sent_to_Contracts_Admin__c</fullName>
    <label>Contract Accepted Date</label>
    <type>DateTime</type>
</CustomField>