force-app/main/default/objects/Case/fields/Date_Sent_to_Contracts_US__c.field-meta.xml
<CustomField>
    <fullName>Date_Sent_to_Contracts_US__c</fullName>
    <label>Date Sent to Contracts US</label>
    <type>DateTime</type>
</CustomField>