force-app/main/default/objects/Case/fields/Date_Sent_To_Shared_services__c.field-meta.xml
<CustomField>
    <fullName>Date_Sent_To_Shared_services__c</fullName>
    <label>Date Sent to Shared Services</label>
    <type>DateTime</type>
</CustomField>