force-app/main/default/objects/Case/fields/Date_TCM_Setup_Completed__c.field-meta.xml
<CustomField>
    <fullName>Date_TCM_Setup_Completed__c</fullName>
    <description>the date the Tape Catalog Manager System has been updated</description>
    <label>Date TCM Setup Completed</label>
    <type>DateTime</type>
</CustomField>