force-app/main/default/objects/Case/fields/Date_Termination_Request_Sent_Contracts__c.field-meta.xml
<CustomField>
    <fullName>Date_Termination_Request_Sent_Contracts__c</fullName>
    <label>Date Termination Request Sent Contracts</label>
    <type>DateTime</type>
</CustomField>