force-app/main/default/objects/Case/fields/Date_Third_Customer_Contact_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Date_Third_Customer_Contact_Attempt__c</fullName>
    <label>Date Third Customer Contact Attempt</label>
    <type>DateTime</type>
</CustomField>