force-app/main/default/objects/Case/fields/Date_Welcome_Call_Attempt_2__c.field-meta.xml
<CustomField>
    <fullName>Date_Welcome_Call_Attempt_2__c</fullName>
    <inlineHelpText>Attempt 1 not complete, left voicemail again or call completed</inlineHelpText>
    <label>Date Welcome Call Attempt 2</label>
    <type>DateTime</type>
</CustomField>