force-app/main/default/objects/Case/fields/Date_welcome_call_completed__c.field-meta.xml
<CustomField>
    <fullName>Date_welcome_call_completed__c</fullName>
    <label>Date Welcome Call Completed</label>
    <type>DateTime</type>
</CustomField>