force-app/main/default/objects/Case/fields/Date_Worksheet_Created__c.field-meta.xml
<CustomField>
    <fullName>Date_Worksheet_Created__c</fullName>
    <label>Date Term Quote Created</label>
    <type>DateTime</type>
</CustomField>