force-app/main/default/objects/Case/fields/DateValue__c.field-meta.xml
<CustomField>
    <fullName>DateValue__c</fullName>
    <formula>TEXT(DATEVALUE(CASE(
    IME_SC_Country__c,
    &apos;United States&apos;, CreatedDate - (5/24),
    &apos;Canada&apos;, CreatedDate - (5/24),
    &apos;Australia&apos;, CreatedDate + (10/24),
    &apos;United Kingdom&apos;, CreatedDate,
    &apos;Ireland&apos;, CreatedDate + (1/24),
    &apos;Norway&apos;, CreatedDate + (1/24),
    &apos;Germany&apos;, CreatedDate + (1/24),
    &apos;Spain&apos;, CreatedDate + (1/24),
    &apos;Belgium&apos;, CreatedDate + (1/24),
    &apos;Austria&apos;, CreatedDate + (1/24),
    &apos;Hungary&apos;, CreatedDate + (1/24),
    &apos;Czech Republic&apos;, CreatedDate + (1/24),
    &apos;Romania&apos;, CreatedDate + (2/24),
    &apos;Netherlands&apos;, CreatedDate + (1/24),
    &apos;Argentina&apos;, CreatedDate - (3/24),
    &apos;Mexico&apos;, CreatedDate - (6/24),
    &apos;Peru&apos;, CreatedDate - (5/24),
    &apos;Colombia&apos;, CreatedDate + (1/24),
    &apos;Chile&apos;, CreatedDate - (3/24),
    &apos;Brazil&apos;, CreatedDate - (5/24),
    &apos;India&apos;, CreatedDate + (5/24),
    &apos;Sweden&apos;, CreatedDate + (1/24),
    &apos;Denmark&apos;, CreatedDate + (1/24),
    &apos;Finland&apos;, CreatedDate + (2/24),
    &apos;South Africa&apos;, CreatedDate + (2/24),
    &apos;United Arab Emirates&apos;, CreatedDate + (4/24),
    &apos;Cyprus&apos;, CreatedDate + (2/24),
    &apos;Turkey&apos;, CreatedDate + (3/24),
    &apos;Hong Kong&apos;, CreatedDate + (8/24),
    &apos;Slovakia&apos;, CreatedDate + (1/24),
    &apos;Greece&apos;, CreatedDate + (2/24),
    &apos;Taiwan&apos;, CreatedDate + (8/24),
    &apos;Indonesia&apos;, CreatedDate + (7/24),
    &apos;Singapore&apos;, CreatedDate + (8/24),
    &apos;Malaysia&apos;, CreatedDate + (8/24),
    &apos;South Korea&apos;, CreatedDate + (9/24),
    &apos;Lithuania&apos;, CreatedDate + (2/24),
    &apos;Estonia&apos;, CreatedDate + (2/24),
    &apos;Latvia&apos;, CreatedDate + (2/24),
    &apos;Philippines&apos;, CreatedDate + (8/24),
    &apos;Croatia&apos;, CreatedDate + (1/24),
    &apos;Bulgaria&apos;, CreatedDate + (2/24),
    &apos;Serbia&apos;, CreatedDate + (1/24),
    &apos;Thailand&apos;, CreatedDate + (7/24),
    CreatedDate
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DateValue</label>
    <type>Text</type>
</CustomField>