force-app/main/default/objects/Case/fields/Day_Welcome_Call1_to_Welcome_Comp__c.field-meta.xml
<CustomField>
    <fullName>Day_Welcome_Call1_to_Welcome_Comp__c</fullName>
    <formula>DATEVALUE(Date_welcome_call_completed__c) - DATEVALUE(Date_Welcome_Call_Attempt_1__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>#Day Welcome Call1 to Welcome Comp</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>