force-app/main/default/objects/Case/fields/Days_Btwn_Date_Ppwk_Recd_and_Srv_Comp__c.field-meta.xml
<CustomField>
    <fullName>Days_Btwn_Date_Ppwk_Recd_and_Srv_Comp__c</fullName>
    <formula>IF( OR( ISNULL(Date_Paperwork_Received__c) , ISNULL( Service_Completion_Date__c )), 0, (Service_Completion_Date__c - Date_Paperwork_Received__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The number of days between Service Completion Date and Date Paperwork received. This field will display 0 if either date is not populated.</inlineHelpText>
    <label>Days Btwn Date Ppwk Recd and Srv Comp</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>