force-app/main/default/objects/Case/fields/Days_Contract_Sign_to_Paperwork_Recvd__c.field-meta.xml
<CustomField>
    <fullName>Days_Contract_Sign_to_Paperwork_Recvd__c</fullName>
    <formula>DATEVALUE(Date_Paperwork_Received__c) -  DATEVALUE(Date_Contract_Signed__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>#Days Contract Sign to Paperwork Recvd</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>