force-app/main/default/objects/Case/fields/Days_Open__c.field-meta.xml
<CustomField>
    <fullName>Days_Open__c</fullName>
    <description>Number of days the case has been (or was) open.</description>
    <formula>IF(ISNULL(ClosedDate), TODAY() - DATEVALUE(CreatedDate), DATEVALUE(ClosedDate) - DATEVALUE(CreatedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Open</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>