force-app/main/default/objects/Case/fields/Days_Open_del__c.field-meta.xml
<CustomField>
    <fullName>Days_Open_del__c</fullName>
    <formula>IF(IsClosed,
null,
NOW() - CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Shows how many days a case has been open</inlineHelpText>
    <label>Days Open</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>