force-app/main/default/objects/Case/fields/Days_Welcome_CallComp_to_Supply_Delvrd__c.field-meta.xml
<CustomField>
    <fullName>Days_Welcome_CallComp_to_Supply_Delvrd__c</fullName>
    <formula>DATEVALUE(Supplies_Delivered_Date__c) -  DATEVALUE(Date_welcome_call_completed__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>#Days Welcome Call Comp to Supply Delvrd</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>