force-app/main/default/objects/Case/fields/DB_R_Box_Quantity__c.field-meta.xml
<CustomField>
    <fullName>DB_R_Box_Quantity__c</fullName>
    <label>DM Box Quantity</label>
    <length>100</length>
    <type>Text</type>
</CustomField>