force-app/main/default/objects/Case/fields/DB_R_Tape_Quantity__c.field-meta.xml
<CustomField>
    <fullName>DB_R_Tape_Quantity__c</fullName>
    <label>DM Tape Quantity</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>