force-app/main/default/objects/Case/fields/DB_R_Type__c.field-meta.xml
<CustomField>
    <fullName>DB_R_Type__c</fullName>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>NCSP_Service_line__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Data Restoration Assurance Program</fullName>
            </value>
            <value>
                <fullName>Tape Catalog Manager</fullName>
            </value>
            <value>
                <fullName>Tape Vaulting</fullName>
            </value>
            <value>
                <fullName>SITAD Closure</fullName>
            </value>
            <value>
                <fullName>Off-Site Media Destruction</fullName>
            </value>
            <value>
                <fullName>On-Site Media Destruction</fullName>
            </value>
            <value>
                <fullName>In-Vault (Non-Closure)</fullName>
            </value>
            <value>
                <fullName>Federal</fullName>
            </value>
            <value>
                <fullName>Decom</fullName>
            </value>
            <value>
                <fullName>Special Handling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>