force-app/main/default/objects/Case/fields/Delay_Category__c.field-meta.xml
<CustomField>
    <fullName>Delay_Category__c</fullName>
    <description>Auto-populated (B2B Implementation Cases) from the related Opportunity's Delay Category at Case creation, via Case_Field_Mapping__c / CaseFieldMappingEngine. Text rather than mirroring the source Picklist deliberately, so the copy can't fail on a value-set mismatch if Opportunity's Delay Category list changes.</description>
    <label>Delay Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>