force-app/main/default/objects/Case/fields/Delay_to_Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Delay_to_Contract_End_Date__c</fullName>
    <description>Case 08774372</description>
    <label>Delay to Contract End Date</label>
    <type>DateTime</type>
</CustomField>