force-app/main/default/objects/Case/fields/Department_ID__c.field-meta.xml
<CustomField>
    <fullName>Department_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Customer Account Department.  Only Strict Departments are shown.  Non-Strict Departments shown in source systems.</inlineHelpText>
    <label>Department</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1</booleanFilter>
        <errorMessage>Value does not match -- department you select needs to be a department within the case division and customer account.</errorMessage>
        <filterItems>
            <field>Department__c.Division_cd__c</field>
            <operation>equals</operation>
            <valueField>$Source.Division_ID__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Department__c</referenceTo>
    <relationshipLabel>Cases1</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>