force-app/main/default/objects/Case/fields/Destruction_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Destruction_Order_Number__c</fullName>
    <label>Destruction Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>