force-app/main/default/objects/Case/fields/Development_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Development_Completion_Date__c</fullName>
    <description>This is the date the business acknowledges that the development is complete and meets the requirement</description>
    <inlineHelpText>The date the business acknowledges that the development is complete and meets the requirement</inlineHelpText>
    <label>Actual Development End Date</label>
    <type>Date</type>
</CustomField>