force-app/main/default/objects/Case/fields/Development_Information_Status__c.field-meta.xml
<CustomField>
    <fullName>Development_Information_Status__c</fullName>
    <label>Development Information Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>