force-app/main/default/objects/Case/fields/DM_Destruction_Y_N__c.field-meta.xml
<CustomField>
    <fullName>DM_Destruction_Y_N__c</fullName>
    <label>DM Destruction (Y/N)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>