force-app/main/default/objects/Case/fields/DMS_Type__c.field-meta.xml
<CustomField>
    <fullName>DMS_Type__c</fullName>
    <label>DMS Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>NCSP_Service_line__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Backfile</fullName>
            </value>
            <value>
                <fullName>Conversion Services</fullName>
            </value>
            <value>
                <fullName>Conversion Services with DRCI</fullName>
            </value>
            <value>
                <fullName>Dayforward</fullName>
            </value>
            <value>
                <fullName>Image on Demand.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>