force-app/main/default/objects/Case/fields/DP_Container_Quantity__c.field-meta.xml
<CustomField>
    <fullName>DP_Container_Quantity__c</fullName>
    <label>DM - Container Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>