force-app/main/default/objects/Case/fields/DP_Container_Type__c.field-meta.xml
<CustomField>
    <fullName>DP_Container_Type__c</fullName>
    <label>DM - Container Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
            <value>
                <fullName>Array</fullName>
            </value>
            <value>
                <fullName>C2</fullName>
            </value>
            <value>
                <fullName>C4</fullName>
            </value>
            <value>
                <fullName>C5</fullName>
            </value>
            <value>
                <fullName>C7</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Combo</fullName>
            </value>
            <value>
                <fullName>Compact</fullName>
            </value>
            <value>
                <fullName>DP</fullName>
            </value>
            <value>
                <fullName>D4</fullName>
            </value>
            <value>
                <fullName>DW</fullName>
            </value>
            <value>
                <fullName>DR Kit</fullName>
            </value>
            <value>
                <fullName>Enclosed</fullName>
            </value>
            <value>
                <fullName>F</fullName>
            </value>
            <value>
                <fullName>GP</fullName>
            </value>
            <value>
                <fullName>GT</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Open Media</fullName>
            </value>
            <value>
                <fullName>P4</fullName>
            </value>
            <value>
                <fullName>PL</fullName>
            </value>
            <value>
                <fullName>Temporary</fullName>
            </value>
            <value>
                <fullName>Transport</fullName>
            </value>
            <value>
                <fullName>Turtle</fullName>
            </value>
            <value>
                <fullName>X2</fullName>
            </value>
            <value>
                <fullName>XC</fullName>
            </value>
            <value>
                <fullName>XD</fullName>
            </value>
            <value>
                <fullName>XR</fullName>
            </value>
            <value>
                <fullName>XM</fullName>
            </value>
            <value>
                <fullName>XT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>