force-app/main/default/objects/Case/fields/DP_Containers_Delivered__c.field-meta.xml
<CustomField>
    <fullName>DP_Containers_Delivered__c</fullName>
    <description>Used by Retention &amp; CAC SKP DP Teams</description>
    <label>DM - Containers Delivered</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>