force-app/main/default/objects/Case/fields/DP_Open_Media__c.field-meta.xml
<CustomField>
    <fullName>DP_Open_Media__c</fullName>
    <label>DM Open Media</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>