force-app/main/default/objects/Case/fields/DRCI_Audit_Status__c.field-meta.xml
<CustomField>
    <fullName>DRCI_Audit_Status__c</fullName>
    <description>DRCI is a system where all the customer contract records are scanned into and stored.</description>
    <label>DRCI Audit Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Audit_Status__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Resubmitted</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Passed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>