force-app/main/default/objects/Case/fields/Eligible_Annual_Amount__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Annual_Amount__c</fullName>
    <description>Auto-populated from the related Opportunity's Amount at Case creation, via Case_Field_Mapping__c / CaseFieldMappingEngine. Case Fields sheet row "Total Annual Amount (TAA)" - the sheet's own cited source field doesn't exist; per explicit direction this copies Opportunity.Amount instead. Note: Opportunity already has a same-named Eligible_Annual_Amount__c field for a related but distinct reporting/incentive purpose - not the source used here.</description>
    <label>Eligible Annual Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>