force-app/main/default/objects/Case/fields/Email_Archive_Flag__c.field-meta.xml
<CustomField>
    <fullName>Email_Archive_Flag__c</fullName>
    <formula>IF( AND( TODAY() - DATEVALUE (ClosedDate)&gt; 180, NOT(CFACE__Is_Archived__c)) ,&quot;TRUE&quot;,&quot;FALSE&quot;)</formula>
    <label>Email Archive Flag</label>
    <type>Text</type>
</CustomField>