force-app/main/default/objects/Case/fields/Emails_Archived__c.field-meta.xml
<CustomField>
    <fullName>Emails_Archived__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to mark when the case has its email archived and converted into big object records</description>
    <label>Emails Archived?</label>
    <type>Checkbox</type>
</CustomField>