force-app/main/default/objects/Case/fields/EnabledForQualtricsIntegration__c.field-meta.xml
<CustomField>
    <fullName>EnabledForQualtricsIntegration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is populated from visual flow and process builder on create and update of case record. This field will if the case contact country is enable for customer survey or not.</description>
    <label>EnabledForQualtricsIntegration</label>
    <type>Checkbox</type>
</CustomField>