force-app/main/default/objects/Case/fields/End_Time_Cutoff_SLA__c.field-meta.xml
<CustomField>
    <fullName>End_Time_Cutoff_SLA__c</fullName>
    <label>Cut-Off Time</label>
    <type>DateTime</type>
</CustomField>