force-app/main/default/objects/Case/fields/Error_impact_all_Customer_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Error_impact_all_Customer_Accounts__c</fullName>
    <label>Error impact all Customer Accounts</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>