force-app/main/default/objects/Case/fields/Exception_Rate_Id__c.field-meta.xml
<CustomField>
    <fullName>Exception_Rate_Id__c</fullName>
    <label>Exception Rate Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>