force-app/main/default/objects/Case/fields/Federal_Department_Roll_Up_Gov_t_Only__c.field-meta.xml
<CustomField>
    <fullName>Federal_Department_Roll_Up_Gov_t_Only__c</fullName>
    <label>Federal Department Roll Up (Gov&apos;t Only)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Case_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Department of Agriculture (USDA)</fullName>
            </value>
            <value>
                <fullName>Department of Commerce (DOC)</fullName>
            </value>
            <value>
                <fullName>Department of Defense (DOD)</fullName>
            </value>
            <value>
                <fullName>Department of Education (DED)</fullName>
            </value>
            <value>
                <fullName>Department of Energy (DOE)</fullName>
            </value>
            <value>
                <fullName>Department of Health and Human Services (DHHS)</fullName>
            </value>
            <value>
                <fullName>Department of Homeland Security (DHS)</fullName>
            </value>
            <value>
                <fullName>Department of Housing and Urban Development (HUD)</fullName>
            </value>
            <value>
                <fullName>Department of Justice (DOJ)</fullName>
            </value>
            <value>
                <fullName>Department of Labor (DOL)</fullName>
            </value>
            <value>
                <fullName>Department of State (DOS)</fullName>
            </value>
            <value>
                <fullName>Department of the Interior (DOI)</fullName>
            </value>
            <value>
                <fullName>Department of the Treasury</fullName>
            </value>
            <value>
                <fullName>Department of Transportation (DOT)</fullName>
            </value>
            <value>
                <fullName>Department of Veterans Affairs (VA)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>