force-app/main/default/objects/Case/fields/Final_Customer_Contact_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Customer_Contact_Date__c</fullName>
    <label>Final Customer Contact Date</label>
    <type>DateTime</type>
</CustomField>