force-app/main/default/objects/Case/fields/Final_Order_Method__c.field-meta.xml
<CustomField>
    <fullName>Final_Order_Method__c</fullName>
    <label>Final Order Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer Pickup</fullName>
            </value>
            <value>
                <fullName>Delivery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>