force-app/main/default/objects/Case/fields/Follow_up_Date__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_Date__c</fullName>
    <description>Used by Issues &amp; Task teams to manage their case load</description>
    <label>Follow-up Date</label>
    <type>DateTime</type>
</CustomField>