force-app/main/default/objects/Case/fields/Follow_up_Note__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_Note__c</fullName>
    <description>Used by Issues &amp; Task teams to manage their case load</description>
    <label>Follow-up Note</label>
    <type>TextArea</type>
</CustomField>