force-app/main/default/objects/Case/fields/FollowUp_Type__c.field-meta.xml
<CustomField>
    <fullName>FollowUp_Type__c</fullName>
    <label>FollowUp Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Automatic</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>